--- a/api/package.json
+++ b/api/package.json
@@ -25,7 +25,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./app.ts",
-    "start": "ts-node src/index.ts"
+    "start": "ts-node ./app.ts"
   },
   "keywords": [],
   "author": "Schias",
