--- a/ui/package.json
+++ b/ui/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "chart.js": "^3.7.0",
     "vee-validate": "^4.5.7",
     "vue": "^3.2.25",
+    "vue-chart-3": "^3.0.4",
     "vue-router": "^4.0.12",
     "yup": "^0.32.11"
   },
