--- a/ui/package.json
+++ b/ui/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "chart.js": "^3.7.0",
     "vee-validate": "^4.5.7",
     "vue": "^3.2.25",
